--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ACE_FitnessCenter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mssql-jdbc-8.2.2.jre8.jar=C:\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
 file.reference.sqljdbc42.jar=C:\\Users\\ADMIN\\Desktop\\T\u00e0i li\u1ec7u b\u1ed9 m\u00f4n\\ConnectToSQL\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
