--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mssql-jdbc-8.2.2.jre8.jar=C:\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
 file.reference.mssql-jdbc-8.2.2.jre8.jar-1=C:\\Users\\khanb\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
+file.reference.mssql-jdbc-8.2.2.jre8.jar-2=C:\\Users\\pc\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
 file.reference.sqljdbc42.jar=C:\\Users\\ADMIN\\Desktop\\T\u00e0i li\u1ec7u b\u1ed9 m\u00f4n\\ConnectToSQL\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.mssql-jdbc-8.2.2.jre8.jar}:\
-    ${file.reference.mssql-jdbc-8.2.2.jre8.jar-1}
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar-1}:\
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
