--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,5 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\khanb\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mssql-jdbc-8.2.2.jre8.jar=D:\\My Documents\\GitHub\\ACE_FitnessCenter
+file.reference.mssql-jdbc-8.2.2.jre8.jar-1=D:\\My Documents\\GitHub\\ACE_FitnessCenter
+file.reference.sqljdbc42.jar=D:\\My Documents\\GitHub\\ACE_FitnessCenter
+user.properties.file=C:\\Users\\Administrator\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
