--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,10 @@ dist.dir=dist
 dist.jar=${dist.dir}/ACE_FitnessCenter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itext-pdfa-5.4.0.jar=C:\\Users\\Mycomputer\\Desktop\\duan\\jfreechart\\itext-pdfa-5.4.0.jar
+file.reference.javax.mail.jar=C:\\Users\\Mycomputer\\Desktop\\duan\\javax.mail.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\Mycomputer\\Desktop\\duan\\jfreechart\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\Mycomputer\\Desktop\\duan\\jfreechart\\jfreechart-1.0.19.jar
 file.reference.mssql-jdbc-8.2.2.jre8.jar=C:\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
 file.reference.mssql-jdbc-8.2.2.jre8.jar-1=C:\\Users\\khanb\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
 file.reference.mssql-jdbc-8.2.2.jre8.jar-2=C:\\Users\\pc\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre8.jar
@@ -37,7 +41,11 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-8.2.2.jre8.jar}:\
     ${file.reference.mssql-jdbc-8.2.2.jre8.jar-1}:\
     ${file.reference.mssql-jdbc-8.2.2.jre8.jar-2}:\
-    ${file.reference.mssql-jdbc-8.2.2.jre8.jar-3}
+    ${file.reference.mssql-jdbc-8.2.2.jre8.jar-3}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.itext-pdfa-5.4.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
